# nuclie

./: .eslintignore  .gitignore  .nexxo-marketplace.db  .npmignore  ACHIEVEMENT_REPORT.md  ADAPTER_AUTHORING_GUIDE.md  ADAPTER_GOVERNANCE.md  ADAPTER_GRADUATION_POLICY.md  ADAPTER_PRODUCTION_CHECKLIST.md  ADAPTER_SECURITY_CHECKLIST.md  ALL_FRAMEWORKS_PRODUCTION_PLAN.md  ALL_TESTS_COMPLETE.md  ALL_TESTS_PASSING_SUMMARY.md  ALL_TEST_FIXES_COMPLETE.md  BENCHMARKS.md  BENCHMARK_REPORT.md  BINARY_SIZE_OPTIMIZATION.md  BUILD_VERIFICATION_REPORT.md  BUN_PARSER_PERFORMANCE_ISSUE.md  BUN_USAGE_ANALYSIS.md  CHANGELOG.md  CI_FIXES_COMPLETE.md  CI_ISSUES_TODO.md  CI_READY_TO_DEPLOY.md  CI_STATUS.md  CI_TEST_FAILURES_ANALYSIS.md  CI_WORKFLOW_FIXES.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_SUMMARY.md  CLOUD_API_SPEC.md  COLD_START_PLAN.md  COMPATIBILITY.md  COMPLETE.md  COMPLETE_REPORT.md  COMPLETION_CHECKLIST.md  COMPLETION_ROADMAP.md  COMPREHENSIVE_TEST_PLAN.md  CONTRIBUTING.md  CORE_ENGINE_REPORT.md  (+252 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.governance/: AUDIT_REPORT_v1.0.0-freeze.md  AUDIT_REPORT_v1.0.10.md  AUDIT_REPORT_v1.0.2.md  api-baseline.json  inspector-schema-baseline.json  plugin-contract-baseline.json
.nexxo_cache/: cache.db  cache.db-shm  cache.db-wal
.urja_cache/: cache.db
_minitest/: urja.config.js
benchmarks/: bundler-comparison.ts  cache-system.ts  cold-start-verification.ts  direct-startup.ts  hmr-comparison.ts  honest-cold-start.ts  module5-ux-suite.ts  module7-benchmarks.ts  parser-comparison.ts  plugin-perf.ts  production-cold-start.ts  run.mjs  runner.ts  ssr-perf.ts  ux-score.ts
ci-templates/: github-ci.yml
cloud-backend/: DEPLOYMENT.md  package.json  schema.sql  server.ts
demo_project/: package.json
docker-benchmarks/: Dockerfile  package.json  (+1 more)
native/: Cargo.toml  index.cjs  index.d.ts  index.js  package.json
native/src/: cache.rs  chunker.rs  graph.rs  lib.rs  orchestrator.rs  prebundle.rs  sourcemap_merger.rs  task_graph.rs  transform.rs  wasmtime.rs  watcher.rs
src/native/: Cargo.toml  cache.ts  index.d.ts  index.ts  native.d.ts  nextgen_native.linux-x64-gnu.node  nexxo_native.d.ts  nuclie_native.d.ts  orchestrator.ts  package.json  sparx_native.d.ts  urja_native.d.ts  urja_native.linux-x64-gnu.node  wasm.ts
src/native/src/: cache.rs  graph.rs  lib.rs
src/native/src/pipeline/: mod.rs  resolver.rs  transformer.rs
(+3512 files in other folders)
