[package]
name = "nexxo_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
napi = { version = "3", features = ["async", "tokio_rt"] }
napi-derive = "3"
regex = "1.12.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }

[build-dependencies]
napi-build = "2"

