[package]
name = "nexxo_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
napi = { version = "3", features = ["async", "tokio_rt"] }
napi-derive = "3"
regex = "1.12.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }

# Day 2: Tokio Orchestrator & RocksDB Cache
tokio = { version = "1.35", features = ["full"] }
rocksdb = "0.22"
serde = "=1.0.210"
serde_json = "1.0"
rayon = "1.8"  # For parallel iterators

chrono = "0.4"  # For timestamps

# Day 8: WASM Runtime
wasmtime = "18.0"
anyhow = "1.0"

# Day 55: Rust Core Migration
swc_core = { version = "0.90", features = ["common", "ecma_ast", "ecma_parser", "ecma_codegen", "ecma_minifier", "ecma_visit", "ecma_transforms_module", "ecma_transforms_typescript"] }
swc_common = "0.33.26"
swc_ecma_transforms_base = "0.137.21"
base64 = "0.22"

[build-dependencies]
napi-build = "2"

