[package]
name = "nextgen-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", features = ["napi4", "async"] }
napi-derive = "2.12.2"
sha2 = "0.10"
hex = "0.4"
rayon = "1.8"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
petgraph = "0.6"
